# torana

./: .gitattributes  .gitignore  CONTRIBUTING  COPYING  Cargo.toml  README.org  flake.nix  rust-toolchain
.cargo/: config.toml
.github/workflows/: main.yml  web.yml
nix/: default.nix  torana-web.nix  torana.nix
src/: lib.rs  main.rs
