[package]
name = "torana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12", features = [ "derive" ] }
cfg-if = "1"
env_logger = "0.9"
image = "0.24"
log = "0.4"
wgpu = "0.14"
winit = "0.27"
